dao/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: dao
    app.kubernetes.io/name: dao
  name: dao
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: dao
      app.kubernetes.io/name: dao
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dao
        app.kubernetes.io/name: dao
    spec:
      containers:
        - image: registry.devops.rivtower.com/web5/dao:${DAO_VERSION}
          imagePullPolicy: Always
          name: dao
          command: ['dao']
          args:
            [
              '--log-filter',
              'debug,hyper_util=info,sqlx=info',
              '--port',
              '$(PORT)',
              '--db-url',
              '$(DB_URL)',
              '--pds',
              '$(PDS)',
              '--ckb-url',
              '$(CKB_URL)',
              '--indexer-bind-url',
              '$(INDEXER_BIND_URL)',
              '--indexer-did-url',
              '$(INDEXER_DID_URL)',
              '--indexer-vote-url',
              '$(INDEXER_VOTE_URL)',
              '--apidoc',
            ]
          ports:
            - containerPort: ${DAO_PORT}
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: {}
        - image: m.daocloud.io/docker.io/postgres:17-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
  volumeClaimTemplates:
    - metadata:
        name: database
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 50Gi
